# UCBotSOCDK

./: README.md
cdk/: package-lock.json  package.json
cdk/lib/: cdk-stack.ts
lambda/: Cargo.toml
lambda/email_lambda/: Cargo.toml  Dockerfile
lambda/email_lambda/src/: main.rs
lambda/zapier_lambda/: Cargo.toml  Dockerfile
lambda/zapier_lambda/src/: main.rs
