[package]
name = "email_lambda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.8.1"
serenity = "0.11"

aws-config = "0.55.3"
aws-sdk-lambda = "0.28.0"
tokio = { version = "1", features = ["full"] }
anyhow = "*"

serde = "1.0.136"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "fmt"] }
tokio-test = "0.4.2"